# Monocypher

./: .gitignore  meson.build
tests/: meson.build
